# C_programming

./: CMakeLists.txt  LICENSE  README.md  build.sh
conversions/: CMakeLists.txt  integer_to_string.c  integer_to_string.h  integer_to_string_tests.c  string_to_integer.c  string_to_integer.h  string_to_integer_tests.c
dynamic_array/: CMakeLists.txt  README.md  dynamic_array.c  dynamic_array.h  dynamic_array_tests.c  static_pool.c  static_pool.h  static_pool_tests.c
fat_pointer/: CMakeLists.txt  fat_pointer.c  fat_pointer.h  fat_pointer_tests.c
includes/: Boolean_type.h  README.md  allocator_type.h  constexpr_int.h  fixed_width_integer_types.h  inline_or_static.h  iterator_type.h  macro_alignof.h  macro_concatenate.h  macro_stringify.h  macro_typeof.h  reference_type_emulation.h  sizeof_array.h  static_assert.h  string_reference.h
programs/: CMakeLists.txt  binary_viewer.c  byte_writer.c  evaluate_expression.c
reference_type_emulation/: ABI_compatibility_test.c  ABI_compatibility_test.h  ABI_compatibility_test_code.c  CMakeLists.txt  README.md
reference_type_emulation/c_app_and_c_lib/: CMakeLists.txt
reference_type_emulation/c_app_and_cpp_lib/: CMakeLists.txt
reference_type_emulation/c_lib/: CMakeLists.txt
reference_type_emulation/cpp_app_and_c_lib/: CMakeLists.txt
reference_type_emulation/cpp_app_and_cpp_lib/: CMakeLists.txt
reference_type_emulation/cpp_lib/: CMakeLists.txt
safer_integer/: CMakeLists.txt  README.md  debug_mode_integer.c  debug_mode_integer.h  debug_mode_integer_runtime_tests.c  safe_bitwise_operation_tests.c  safe_bitwise_operations.h  safer_fixed_width_integer_conversion.c  safer_fixed_width_integer_conversion.h  safer_fixed_width_integer_conversion_tests.c  safer_fixed_width_integer_tests.c  safer_fixed_width_integers.c  safer_fixed_width_integers.h  safer_integer.c  safer_integer.h  safer_integer_comparison.h  safer_integer_comparison_tests.c  safer_integer_conversion.c  safer_integer_conversion.h  safer_integer_conversion_tests.c  safer_integer_short_macros.h  safer_integer_tests.c  safer_integer_type.h  safer_integer_type.hpp  safer_integer_type_runtime_tests.c  safer_integer_type_runtime_tests.cpp  safer_integer_type_runtime_tests.h  safer_integer_type_tests.c  safer_integer_type_tests.cpp  safer_integer_type_tests.h  safer_integer_util.h
simple_tokenizer/: CMakeLists.txt  README.md  simple_tokenizer.c  simple_tokenizer.h  simple_tokenizer_tests.c
terminal_text_color/: CMakeLists.txt  README.md  terminal_text_color.c  terminal_text_color.h
tests/: CMakeLists.txt  string_reference_tests.c
unit_testing/: CMakeLists.txt  README.md  unit_testing.c  unit_testing.h  unit_testing_example.c
